--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <app-navbar></app-navbar>
 <app-banner></app-banner>
+<app-sub-banner></app-sub-banner>
 <app-card></app-card>
 <app-faq></app-faq>
 <app-footer></app-footer>
