--- a/src/app/card/card.component.html
+++ b/src/app/card/card.component.html
@@ -1,1 +1,17 @@
-<p>card works!</p>
+<section class="mt-4 mx-4">
+  <div class="row row-cols-1 row-cols-md-4 g-4">
+    <div class="col" *ngFor="let img of Images">
+      <div class="card shadow-lg">
+        <img [src]="img.src" [alt]="img.alt"/>
+        <div class="card-title">
+          <h1>{{img.title}}</h1>
+          <div class="card-body">
+            <p>{{img.desc}}</p>
+            <button>{{img.button}}</button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
