--- a/src/app/sub-banner/sub-banner.component.html
+++ b/src/app/sub-banner/sub-banner.component.html
@@ -1,12 +1,12 @@
 <section>
-    <div class="container">
+    <div class="container1 mt-5">
         <div class="container-image">
-            <img src="" alt="">
+            <img src="../../assets/png/item.png" alt="" data-aos="fade-right">
         </div>
-        <div class="container-content">
-            <h1></h1>
-            <p></p>
-            <a href=""></a>
+        <div class="container-content" >
+            <h1 class="text-shadow-lg" data-aos="fade-down">JUICE</h1>
+            <p data-aos="fade-down">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aut consectetur officiis maxime. Optio exercitationem eos vitae sequi aut doloribus, corrupti aliquid dolorum porro fugit maxime ex et cupiditate blanditiis vero!</p>
+            <a href="" data-aos="fade-down">read more</a>
         </div>
     </div>
 </section>
