--- a/src/app/card/card.component.html
+++ b/src/app/card/card.component.html
@@ -1,7 +1,7 @@
 <section class="mt-4 mx-4">
   <div class="row row-cols-1 row-cols-md-4 g-4">
     <div class="col" *ngFor="let img of Images">
-      <div class="card shadow-lg">
+      <div class="card shadow-lg" data-aos="zoom-in" data-aos-duration="4000">
         <img [src]="img.src" [alt]="img.alt"/>
         <div class="card-title">
           <h1>{{img.title}}</h1>
