--- a/src/app/login/nav/nav.component.html
+++ b/src/app/login/nav/nav.component.html
@@ -1,23 +1,23 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top bg-transparent ">
+<nav class="navbar navbar-expand-lg navbar-light fixed-top bg-dark ">
     <div class="container-fluid">
         <img [src]="image" alt="logo" width="70px">
-      <a class="navbar-brand" routerLink="">{{logo}}</a>
+      <a class="navbar-brand text-light" routerLink="">{{logo}}</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
           <li class="nav-item ">
-            <a class="nav-link " routerLink="">Home</a>
+            <a class="nav-link text-light " routerLink="">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" routerLink="about">About</a>
+            <a class="nav-link text-light" routerLink="about">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" routerLink="contact">Contact</a>
+            <a class="nav-link text-light" routerLink="contact">Contact</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" routerLink="login">Login</a>
+            <a class="nav-link text-light" routerLink="login">Login</a>
           </li>
         </ul>
       </div>
