--- a/src/app/banner/banner.component.html
+++ b/src/app/banner/banner.component.html
@@ -1,3 +1,3 @@
 <div class="banner">
-    <video [src]="video" autoplay loop muted></video>
+    <video [src]="video"[autoplay]="'autoplay'" loop [muted]="'muted'"></video>
 </div>
