--- a/src/app/card/card.component.html
+++ b/src/app/card/card.component.html
@@ -7,7 +7,7 @@
           <h1>{{img.title}}</h1>
           <div class="card-body">
             <p>{{img.desc}}</p>
-            <button>{{img.button}}</button>
+            <button (click)="onclick()">{{img.button}}</button>
           </div>
         </div>
       </div>
