--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -1,18 +1,18 @@
-<app-nav></app-nav>
 <section class="login">
-  <div class="container1">
+  <div class="container">
     <div class="row">
-      <h1>Login</h1>
+      <h1>Signup</h1>
       <div class="container-image">
         <img src="../../assets/png/login.png" alt="">
       </div>
       <div class="container-details">
+        <input type="email" name="" id="" placeholder="Email">
         <input type="text" placeholder="Username"/>
         <input type="password" placeholder="Password"/>
-        <input type="submit" value="Login" />
+        <input type="submit" value="Signup" />
         <div class="sub">
-          <p>Don't have an account ?</p>
-          <a routerLink="signup">signup</a>
+          <p>Already have a account !!</p>
+          <a routerLink="login">Login</a>
         </div>
       </div>
     </div>
