--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top bg-transparent ">
+<nav class="navbar navbar-expand-lg fixed-top mt-mr-ml-4">
     <div class="container-fluid">
         <img [src]="image" alt="logo" width="70px">
       <a class="navbar-brand" routerLink="">{{logo}}</a>
