--- a/src/app/card1/card1.component.html
+++ b/src/app/card1/card1.component.html
@@ -1,10 +1,10 @@
 <section class="mt-4 mx-4">
     <div class="row row-cols-1 row-cols-md-4 g-4">
-      <div class="col" *ngFor="let i of foods">
+      <div class="col" *ngFor="let j of juices">
         <div class="card shadow-lg">
-          <img [src]="i.src" [alt]="i.alt"/>
+          <img [src]="j.src" [alt]="j.alt"/>
           <div class="card-title">
-            <!-- <h1>{{fod.title}}</h1> -->
+            <!-- <h1>{{img.title}}</h1> -->
             <div class="card-body">
               <!-- <p>{{img.desc}}</p> -->
               <!-- <button (click)="onclick()">{{img.button}}</button> -->
