--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -1,61 +1,78 @@
-*{
-    margin: 0;
-    padding: 0;
+section {
+  margin: 0;
+  padding: 0;
+  background-image: url(../../assets/Images/login-bg.jpg);
+  height: 100vh;
+  font-family: sans-serif;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  overflow: hidden;
 }
-.container1{
-    width: 30%;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    margin-top: 10%;
-    text-align: center;
-    padding-bottom: 30px;
-    border: 0.5px solid black;
-    border-radius: 5px;
-    background-color: rgb(200, 230, 220);
-    margin-left: 35%;
+@media screen and (max-width: 600px) {
+  body {
+    background-size: cover fixed;
+  }
 }
-.container-details{
+.login {
+  position: absolute;
+  top: 50%;
+  left: 25%;
+  transform: translate(-50%, -50%);
+  width: 350px;
+  min-height: 200px;
+  background: linear-gradient(
+    rgba(255, 255, 255, 0.4),
+    rgba(255, 255, 255, 0.2)
+  );
+  backdrop-filter: blur(20px);
+  border-radius: 10px;
+  padding: 40px;
+  box-sizing: border-box;
+}
+.login img {
+  margin: 0 auto;
+  display: block;
+  margin-bottom: 20px;
+}
+h3 {
+  margin: 0;
+  padding: 0 0 20px;
+  color: #ffffff;
+  text-align: center;
+}
+.details{
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 30px;
-
+    
 }
 
-.container1 .container-details input{
-    margin: 10px;
-    width: 50%;
-    background-color: transparent;
+.login input[type="email"],
+.login input[type="password"] {
+  width: 100%;
+  margin-bottom: 20px;
+  border: none;
+  border-bottom: 2px solid black;
+  outline: none;
+  height: 40px;
+  color: #fff;
+  background: transparent;
+  font-size: 16px;
+  padding-left: 10px;
+  box-sizing: border-box;
+}
+input[type="button"] {
+  width: 35%;
+  background-color: #ffbd03;
+  border: none;
+  border-radius: 5px;
+  text-align: center;
+  margin: 5px;
 }
 
-.container1 .container-details input[type=submit]{
-    margin: 10px;
-    width:20%;
-}
-
-.container1 .container-image img{
-    margin-top: 20px;
-    width: 40%;
-}
-
-.sub{
-    display: flex;
-}
-
-.sub a{
-    margin-left: 5px;
-    text-decoration: none;
-}
-
-@media screen and (max-width:765px) {
+@media screen and (max-width: 765px) {
     .login{
-margin-top: 40%;
-    }
-    .container1{
-        width: 95%;
+        left: 50%;
     }
 }
-
-
