--- a/src/app/sub-banner/sub-banner.component.css
+++ b/src/app/sub-banner/sub-banner.component.css
@@ -35,3 +35,33 @@
     font-weight: 600;
     font-size: 20px;
 }
+
+@media screen and (max-width:765px) {
+    .container1{
+        display: flex;
+        flex-direction: column;
+    }
+    .container1 img{
+        max-width: 100%;
+        margin-left: 0;
+        align-items: center;
+    }
+    .container1 .container-content{
+        padding-left: 0;
+    
+    }
+    .container1 .container-content p{
+        max-width: 100%;
+        padding-left: 0;
+    
+    }
+}
+@media screen and (max-width:1200px) {
+    .container1 img{
+        margin-left: 0;
+    }
+    .container1 .container-content{
+        padding-left: 0;
+    
+    }
+}
