--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -9,7 +9,7 @@
                 <input  name="Password"  type="password" placeholder="Password"> 
                 <input type="button" name="" value="Login" >
               </div> 
-            <p style="color: #59238F; text-align: center;"> <a routerLink="/signup"> Sign-Up</a></p>
+            <p style="text-align: center;"> <a routerLink="/signup"> Sign-Up</a></p>
         </form> 
         
     </div>
