--- a/src/app/welcome/welcome.component.html
+++ b/src/app/welcome/welcome.component.html
@@ -1,7 +1,6 @@
-<app-navbar></app-navbar>
+<app-navbar2></app-navbar2>
 <app-banner></app-banner>
 <app-card></app-card>
 <app-sub-banner></app-sub-banner>
 <app-faq></app-faq>
 <app-footer></app-footer>
-<app-card1></app-card1>
