--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -61,6 +61,7 @@ h3 {
   font-size: 16px;
   padding-left: 10px;
   box-sizing: border-box;
+  border-radius: 0;
 }
 input[type="button"] {
   width: 35%;
@@ -69,6 +70,15 @@ input[type="button"] {
   border-radius: 5px;
   text-align: center;
   margin: 5px;
+}
+
+.sub{
+  display: flex;
+  justify-content: center;
+}
+.sub a{
+  margin-left: 10px;
+  text-decoration: none;
 }
 
 @media screen and (max-width: 765px) {
