--- a/src/app/milkshakeslist/milkshakeslist.component.html
+++ b/src/app/milkshakeslist/milkshakeslist.component.html
@@ -1,19 +1,17 @@
-
 <section class="mt-4 mx-4">
-    <div class="row row-cols-1 row-cols-md-4 g-5">
-      <div class="col" *ngFor="let j of milkshakeslist">
-        <a routerLink="/{{j.name}}/{{j.id}}">
-          <div class="card shadow-lg">
-            <img [src]="j.image" alt="{{j.name}}" />
-            <div class="card-title">
-              <h1>{{ j.name }}</h1>
-              <div class="card-body">
-                <p>{{ j.description }}</p>
-              </div>
+  <div class="row row-cols-1 row-cols-md-4 g-5">
+    <div class="col" *ngFor="let j of milkshakeslist">
+      <a routerLink="/Milkshakes/{{ j.name }}/{{ j.id }}">
+        <div class="card shadow-lg">
+          <img [src]="j.image" alt="{{ j.name }}" />
+          <div class="card-title">
+            <h1>{{ j.name }}</h1>
+            <div class="card-body">
+              <p>{{ j.description }}</p>
             </div>
           </div>
-        </a>
-      </div>
+        </div>
+      </a>
     </div>
-  </section>
-  
+  </div>
+</section>
