--- a/src/app/mocktailslist/mocktailslist.component.html
+++ b/src/app/mocktailslist/mocktailslist.component.html
@@ -1,7 +1,7 @@
 <section class="mt-4 mx-4">
     <div class="row row-cols-1 row-cols-md-4 g-5">
       <div class="col" *ngFor="let j of mocktailslist">
-        <a routerLink="/{{j.name}}/{{j.id}}">
+        <a routerLink="/Mocktails/{{j.name}}/{{j.id}}">
           <div class="card shadow-lg">
             <img [src]="j.image" alt="{{j.name}}" />
             <div class="card-title">
