--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -1,14 +1,12 @@
 nav{
     background-color: transparent;
-    margin-right: 30px;
-    margin-left: 30px;
-    margin-top: 30px;
-}
-nav:hover{
     background-color: black;
+
 }
+
 .nav-item a{
-    color: white;
+    color: aqua;
+    /* font-size: large; */
 }
 .navbar-brand {
     color: aqua;
