--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -11,13 +11,13 @@
             <a class="nav-link " routerLink="">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" routerLink="about">About</a>
+            <a class="nav-link" routerLink="/about">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" routerLink="contact">Contact</a>
+            <a class="nav-link" routerLink="/contact">Contact</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" routerLink="login">Login</a>
+            <a class="nav-link" routerLink="/login">Login</a>
           </li>
         </ul>
       </div>
